tests/scripts/type_errors/standalone_type.roto
filter foo() {
	let a = String;
	accept
}
